changed the logo and caption

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="navigate_element"><a href="#" class="icon"><i class="fas fa-user-plus"></i></a></div>
 		</nav>
 		<div class="caption">
-			“Occaecat in deserunt ad nostrud do non amet commodo magna id et laborum”
+			“Waterproofing solutions - inside out”
 		</div>
 	</header>
 	<section class="reviews">
