comments and bootstrap link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
+	<!-- Header nav bar and hero background -->
 	<header>
 		<nav class="navigate">
 			<div class="navigate_element"><a href="#">About Us</a></div>
@@ -20,6 +21,9 @@
 			“Waterproofing solutions - inside out”
 		</div>
 	</header>
+
+	<!-- Reviews Section -->
+
 	<section class="reviews">
 		<h1> Our Customers </h1>
 		<div class="reviews_container">
