--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
 <body>
 	<!-- Header nav bar and hero background -->
 	<header>
-		<nav class="navigate">
-			<div class="navigate_element"><a href="#">About Us</a></div>
-			<div class="navigate_element"><a href="#">FAQ</a></div>
-			<div class="navigate_element"><a href="#">Facilities</a></div>
-			<div class="navigate_element logo"><a href="">Weather Insulations</a></div>
-			<div class="navigate_element"><a href="#">Contact Us</a></div>
-			<div class="navigate_element"><a href="#">Gallery</a></div>			
-			<div class="navigate_element"><a href="#" class="icon"><i class="fas fa-user-plus"></i></a></div>
+		<nav class="navigation">
+			<div><a href="#">About Us</a></div>
+			<div><a href="#">FAQ</a></div>
+			<div><a href="#">Facilities</a></div>
+			<div class="logo"><a href="" class="font">Weather Insulations</a></div>
+			<div><a href="#">Contact Us</a></div>
+			<div><a href="#">Gallery</a></div>			
+			<div><a href="#"><i class="fas fa-user-plus"></i></a></div>
+		</nav>
+		<!-- for mobile and tablet view view width 900px-->
+		<nav class="navigation_phone">
+			<div class="logo_phone"><a href="">Weather Insulations</a></div>
+			<div class="button"><a href="#" class="icon"><i class="fas fa-bars"></i></a></div>
+            <div class="button_click">
+             <div><a href="#">About us</a></div>
+			 <div><a href="#">FAQ</a></div>
+			 <div><a href="#">Facilities</a></div>
+			 <div><a href="#">Contact Us</a></div>
+			 <div><a href="#">Gallery</a></div>
+			 <div><a href="#">Login</a></div>
+            </div>
 		</nav>
 		<div class="caption">
 			“Waterproofing solutions - inside out”
