--- a/nav-bar/nav.html
+++ b/nav-bar/nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Weather Insulations</title>
+	<title>Nav-tab</title>
 	<link rel="stylesheet" type="text/css" href="nav.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
