added services section home page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,26 @@
             </div>
 		</nav>
 	
-
+    <section class="section_facilities">
+    	<h1 class="hero">What  we offer</h1>
+       <div class="facilities">
+	       	<div class="service">
+	       		<div><img src="woods.png"></div>
+	       		<h1>Carpentry</h1>
+	       		<p>Lorem ipsum id id do adipisicing qui exercitation enim ut minim et aliquip.</p>
+	       </div>
+	       <div class="service">
+	       		<div><img src="raindrop.png"></i></div>
+	       		<h1>Waterproofing</h1>
+	       		<p>Irure minim excepteur qui velit elit enim dolore esse irure irure dolore.</p>
+	       </div>
+	       <div class="service">
+	       	    <div><img src="paint-brush.png"></div>
+	       	    <h1>Paint job</h1>
+	       		<p>Adipisicing anim velit ullamco irure eiusmod qui dolor id aliquip exercitation.</p>
+	       </div>	
+       </div>
+    </section>
 	<!-- Reviews Section -->
 
 	<section class="reviews">
@@ -54,6 +73,9 @@
 		    <button><i class="fas fa-chevron-right"></i></button>
 		</div>		
 	</section>
+	<footer>
+		<p><i class="far fa-copyright"></i>Copyright Weather Insulation Pvt. Ltd. @2018</p>
+	</footer>
 </body>
 	<script type="text/javascript" src="js/index.js"></script>
 </html>
