--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="logo"><a href="" class="font">Weather Insulations</a></div>
 			<div><a href="#">Contact Us</a></div>
 			<div><a href="#">Gallery</a></div>			
-			<div><a href="#"><i class="fas fa-user-plus"></i></a></div>
+			<div><a href="login.html"><i class="fas fa-user-plus"></i></a></div>
 		</nav>
 		<!-- for mobile and tablet view view width 900px-->
 		<nav class="navigation_phone">
@@ -34,22 +34,22 @@
 			 <div><a href="#">Login</a></div>
             </div>
 		</nav>
-	
+	<!-- Service Offered -->
     <section class="section_facilities">
     	<h1 class="hero">What  we offer</h1>
        <div class="facilities">
 	       	<div class="service">
-	       		<div><img src="woods.png"></div>
+	       		<div><img src="img/woods.png"></div>
 	       		<h1>Carpentry</h1>
 	       		<p>Lorem ipsum id id do adipisicing qui exercitation enim ut minim et aliquip.</p>
 	       </div>
 	       <div class="service">
-	       		<div><img src="raindrop.png"></i></div>
+	       		<div><img src="img/raindrop.png"></i></div>
 	       		<h1>Waterproofing</h1>
 	       		<p>Irure minim excepteur qui velit elit enim dolore esse irure irure dolore.</p>
 	       </div>
 	       <div class="service">
-	       	    <div><img src="paint-brush.png"></div>
+	       	    <div><img src="img/paint-brush.png"></div>
 	       	    <h1>Paint job</h1>
 	       		<p>Adipisicing anim velit ullamco irure eiusmod qui dolor id aliquip exercitation.</p>
 	       </div>	
