--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
    <div class="form_div">
    		<form action="#" method="POST">
 		<div><input type="email" name="Emial_login" placeholder="Email" required></div>
-		<div class="password"><input type="password" name="Password_login" placeholder="Password" required autocomplete="current-password" pattern="[a-zA-Z]+[@_$#]*[0-9]+[a-zA-Z]*" minlength="6" maxlength="12" title="minlength of 6 upto 12 special character '@#$_', should contain numeric"><i class="far fa-eye-slash"></i></div>
+		<div class="password"><input type="password" name="Password_login" placeholder="Password" required autocomplete="current-password" pattern="[a-zA-Z]+[@_$#]*[0-9]+[a-zA-Z]*" minlength="6" maxlength="12" title="minlength of 6 upto 12, special character '@#$_', should contain numeric"><i class="far fa-eye-slash"></i></div>
 		<div class="button_login"><input type="submit" name="submit_login" value="Sign In" ></div>
 	</form>
    </div>
