rename css file

--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 	<title>SignUp</title>
 </head>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/signUp.css">
+<link rel="stylesheet" type="text/css" href="css/signup.css">
 <body>
 <div class="box_login">
 	<div  class="hero">
