--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 		    <button><i class="fas fa-chevron-right"></i></button>
 		</div>		
 	</section>
-	<footer>
-		<p><i class="far fa-copyright"></i>Copyright Weather Insulation Pvt. Ltd. @2018</p>
-	</footer>
+	<section class="footer">
+			<p><i class="far fa-copyright"></i>Copyright Weather Insulation Pvt. Ltd. @2018</p>
+	</section>
 </body>
 	<script type="text/javascript" src="js/index.js"></script>
 </html>
